--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
         </span>
     <div class="infos">
         <span class="maininfo">
-            <p>Green Room Travel is an independent, full-service, IATA-accredited travel agency designed to bring professional travel planning to the creative community.</p>
+            <p class="green">Green Room Travel is an independent, full-service, IATA-accredited travel agency designed to bring professional travel planning to the creative community.</p>
             <p class="work">We work with performers, tour managers, and crew members to plan efficient and cost-effective concert tours and other creative travel.</p>
             <p class="door">We plan door-to-door experiences down to the finest detail, whether you are a band headed out on tour or a fan ready to enjoy the show.</p>
             <p class="receive">Receive daily updates on where to be when and how to get there through full integration with MasterTour</p>
