--- a/views/ourband.ejs
+++ b/views/ourband.ejs
@@ -12,6 +12,7 @@
 <body>
     <%- include('partials/header') %>
 
+    <img class="background-guitar" src="/assets/ourbandguitar.png"></img>
     <span class="three-columns">
         <span class="header-h1">
             <h1>our band</h1>
