--- a/views/ourservices.ejs
+++ b/views/ourservices.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Our Services</title>
+        <title>How it Works</title>
         <link rel="stylesheet" href="ourservices.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,8 @@
                 confident in comparing our rates with anyone else’s.</p>
         </span>
         <h1 class="how-it-works">how it works</h1>
+        <img class="guitar-image" src="/assets/backgroundguitar.png"></img>
+        <img class="guitar-image-bottom" src="/assets/guitarimagebottom.png"></img>
         <span class="bottomhalf">
             <span class="detail">
                 <h2>reach out</h2>
