--- a/views/getintouch.ejs
+++ b/views/getintouch.ejs
@@ -12,7 +12,7 @@
 <body>
     <%- include('partials/header') %>
     
-    <h1>Get in touch</h1>
+    <h1>get in touch</h1>
 
     <div class="touch" data-tf-widget="fFUruKdK" data-tf-opacity="100" data-tf-iframe-props="title=form_title: Lead Generation Form for Bands and Touring Artists" data-tf-transitive-search-params data-tf-medium="snippet" style="width:75%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 
