--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
         <ul>
             <div class="leftlinks">
                 <li><a href="/ourband">our band</a></li>
-                <li><a href="/ourservices">our services</a></li>
+                <li><a href="/realourservices">our services</a></li>
             </div>
             <div class="middlelinks">
                 <li><a href="/" class="logo-a"><img class="logo" src="/assets/GreenRoom_logo 1.png"></img></a></li>
