--- a/views/ourband.ejs
+++ b/views/ourband.ejs
@@ -18,7 +18,7 @@
             <h1>our band</h1>
         </span>
         <span class="name-column-one">
-            <span class="name kempa">
+            <span class="name-kempa">
                 <h2><img src="assets/kempadot.png">Jeff Kempa</h2>
                 <p>founder, IATA certified travel agent</p>
                 <span class="information">
@@ -45,7 +45,7 @@
             </span>
         </span>
         <span class="name-column-two">
-            <span class="name whitney">
+            <span class="whitney">
                 <h2>Whitney Cover<img src="assets/coverdot.png"></h2>
                 <p>user experience</p>
                 <span class="information-right">
