--- a/public/realourservices.css
+++ b/public/realourservices.css
@@ -1,3 +1,154 @@
 body {
+    display: flex;
+    flex-direction: column;
     background: #464141;
+    color: black;
+    font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    width: 40%;
+    font-size: 1.2em;
+    text-align: center;
+    margin: auto;
+    margin-top: 2em;
+    background: white;
+    padding: 1.5em;
+    border-radius: 1em;
+    font-weight: 300;
+    padding-bottom: 2.5em;
+    box-shadow: 0px 2px 10px 1px darkslategray;
+}
+
+.all-experience {
+    margin-left: 4em;
+}
+
+.sideways {
+    font-size: 2em;
+    position: absolute;
+    transform: rotate(90deg);
+    color: white;
+    left: 40em;
+    top: 7em;
+}
+
+.ourservicesguitar {
+    position: absolute;
+    z-index: -1;
+    margin-left: -14.7em;
+    top: 8em;
+}
+
+.accomodations,
+.transportation,
+.support,
+.experiences,
+.advice {
+    background: white;
+    width: 15%;
+    padding: 3.7em;
+    border-radius: 15em;
+    font-size: .7em;
+    box-shadow: 0px 2px 10px 1px darkslategray;
+}
+
+.accomodations h3,
+.transportation h3,
+.support h3,
+.experiences h3,
+.advice h3 {
+    text-align: center;
+}
+
+.h1-rectangle {
+    position: absolute;
+    width: 650px;
+    height: 220px;
+    left: 395px;
+    top: 4490px;
+    background: #00A4A4;
+    border-radius: 25px;
+    z-index: -1;
+    margin-top: -270em;
+}
+
+.bothsides {
+    margin-left: 12em;
+    margin-top: 2em;
+}
+
+.transportation {
+    margin-left: 10em;
+    margin-top: 4em;
+}
+
+.transportation-circle {
+    position: absolute;
+    z-index: -1;
+    width: 20em;
+    margin-left: 3.5em;
+    margin-top: 3.5em;
+}
+
+.support {
+    position: absolute;
+    margin-left: 40em;
+    margin-top: -50em;
+}
+
+.support-circle {
+    position: absolute;
+    margin-left: 29em;
+    margin-top: -33em;
+    width: 19em;
+}
+
+.experiences {
+    position: absolute;
+    margin-left: 73em;
+    margin-top: -30em;
+    width: 13%;
+}
+
+.experiences-circle {
+    position: absolute;
+    z-index: -1;
+    margin-left: 52em;
+    margin-top: -24em;
+}
+
+.advice-circle {
+    position: absolute;
+    z-index: -1;
+    margin-left: 33em;
+    margin-top: -13em;
+    height: 17em;
+    width: 18em;
+}
+
+.advice {
+    position: absolute;
+    margin-left: 50em;
+    margin-top: -15em;
+    width: 13%;
+}
+
+.accomodation-circle {
+    position: absolute;
+    z-index: -1;
+    width: 19em;
+    margin-left: -2em;
+}
+
+header .logo {
+    height: 118px;
+    margin-top: 6px;
+}
+
+.footer {
+    margin-top: 10em;
+    color: white;
 }
