--- a/views/realourservices.ejs
+++ b/views/realourservices.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Our Services</title>
         <link rel="stylesheet" href="realourservices.css">
@@ -11,14 +12,19 @@
     </head>
 <body>
     <%- include('partials/header') %>
-
+    <img class="ourservicesguitar" src="/assets/ourservicesguitar.png"></img>
+    <h2 class="sideways">our services</h2>
+    <div class="h1-rectangle" src="/assets/h1rectangle.png"></div>
     <h1>We specialize in crafting unforgettable travel experiences for independent bands, performing artists, and fans alike. Our team leverages decades of touring, performance, and travel experience to ensure seamless journeys for our clients.
     </h1>
+    <div class="bothsides">
     <div class="left">
+        <img class="accomodation-circle" src="/assets/accomodationcircle.png"></img>
         <div class="accomodations">
         <h3>Accommodations</h3>
         <span>We understand that everyone has different needs and preferences when it comes to accommodations. Whether you´re staying with friends, sharing an apartment, or looking for a five star experience, we’ve got you covered. With access to travel-agent exclusive inventory and relationships with hotels, we can find the right place and rate for everyone.</span>
         </div>
+        <img class="transportation-circle" src="/assets/transportationcircle.png"></img>
         <div class="transportation">
         <h3>Transportation</h3>
         <span><b>Air Travel:</b> With an ever-growing list of airline partners and exclusive rates, we can help you find the best route at the best price for your trip. <br>
@@ -28,6 +34,7 @@
         </div>
     </div>
     <div class="right">
+        <img class="support-circle" src="/assets/supportcircle.png"></img>
         <div class="support">
         <h3>Support</h3>
         <span>We are committed to detail and transparency and always share our proposals with you before booking. We provide daily logistical support through Master Tour and Trip It, including driving directions, schedules, and other important information about the day ahead.<br>
@@ -35,16 +42,21 @@
         Dealing with a cancelled flight or somethng unexpected on the road? We’re only a phone call away. 
         </span>
         </div>
+        <div class="all-experience">
+        <img class="experiences-circle" src="/assets/experiencescircle.png"></img>
         <div class="experiences">
         <h3>Experiences</h3>
         <span>Whether you're performing on tour or following your favorite artist to a new location, we want to help you enjoy your trip to the fullest. We can help plan off-day excursions, make sure you see that "can't miss" exhibit or try the best hole-in-the-wall restaurant, or extend your trip to a full vacation.</span>
         </div>
+        </div>
+        <img class="advice-circle" src="/assets/advicecircle.png"></img>
         <div class="advice">
         <h3>Advice and Problem Solving</h3>
         <span>First big tour? We can help you sort out the logistics of your gear.<br>
         Traveling to a new country? We're happy to investigate visas and carnets for you.<br>
         Tight budget? We can make suggestions for cutting costs and help with booking deals.</span>
         </div>
+    </div>
     </div>
 
     <%- include('partials/footer') %>
