--- a/views/main.ejs
+++ b/views/main.ejs
@@ -16,7 +16,7 @@
     <img class="backgroundguitar" src="/assets/backgroundguitaragain.png"></img>
     <article class="body">
         <span class="forlinks">
-            <span class="forbands"><a href="/ourservices" class="bands">FOR BANDS</a></span>
+            <span class="forbands"><a href="/realourservices" class="bands">FOR BANDS</a></span>
             <span class="forfans"><a href="/forfans" class="fans">FOR FANS</a></span>
         </span>
     <div class="infos">
