--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,20 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <header class="header">
+    <div class="burgerimage"><img class="burgermenu" src="/assets/burger.png"></div>
+
+    <div class="dropmenu">
+        <nav>
+            <ul>
+                <li>Our Services</li>
+                <li>Our Band</li>
+                <li>Get in Touch</li>
+                <li>Home</li>
+                <li>For Fans</li>
+            </ul>
+        </nav>
+    </div>
+
     <nav>
         <ul>
             <div class="leftlinks">
