--- a/public/realourservices.css
+++ b/public/realourservices.css
@@ -152,3 +152,122 @@ header .logo {
     margin-top: 10em;
     color: white;
 }
+
+@media screen and (max-width: 480px)  {
+
+    body, html {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
+    .header .leftlinks {
+        display: none;
+    }
+
+    .header .rightlinks {
+        display: none;
+    }
+
+    .header {
+        height: 200px;
+    }
+
+    .header .middlelinks {
+        margin-left: 85px;
+        margin-top: 20px;
+    }
+
+    .header .logo {
+        height: 130px;
+        width: 170px;
+        padding: 0;
+    }
+
+    .ourservicesguitar {
+        display: none;
+    }
+
+    .h1-rectangle, .accomodation-circle, .transportation-circle, .support-circle, .experiences-circle, .advice-circle {
+        display: none;
+    }
+
+    .sideways {
+        font-size: 1em;
+        transform: rotate(-360deg);
+        color: white;
+        left: 1em;
+        top: 12em;
+    }
+
+    h1 {
+        width: 80%;
+        font-size: .8em;
+        text-align: center;
+        margin-top: 4em;
+        background: white;
+        padding: 1.5em;
+        border-radius: 1em;
+        font-weight: 300;
+        padding-bottom: 2.5em;
+        box-shadow: 0px 2px 10px 1px #B6CC38;
+    }
+
+    .accomodations {
+        width: 75%;
+        text-align: center;
+        margin-left: -15em;
+        box-shadow: 0px 2px 10px 1px #36B891;
+    }
+
+    .transportation {
+        width: 75%;
+        text-align: center;
+        margin-left: -5em; 
+        box-shadow: 0px 2px 10px 1px #71BE4E;
+    }
+
+    .advice, .experiences, .support {
+        position: relative;
+        width: 75%;
+    }
+
+    .right {
+        margin: 0;
+    }
+
+    .support {
+        margin-left: -15em;
+        margin-top: 5em;
+        box-shadow: 0px 2px 10px 1px #71BE4E;
+    }
+
+    .experiences {
+        margin-left: -13.25em;
+        margin-top: 5em; 
+        box-shadow: 0px 2px 10px 1px #1F80A1;
+    }
+
+    .advice {
+        margin-left: -5em;
+        margin-top: 5em;
+        box-shadow: 0px 2px 10px 1px #828D42;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        height: 200px;
+        margin-top: 5em;
+        font-size: .8em;
+    }
+
+    .footer .rightfooter {
+        margin-left: 60%;
+    }
+
+    .footer .middlefooter {
+        margin-left: .5em;
+    }
+
+} 
