--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="footer.css">
 </head>
 <footer class="footer">
+    <span class="drop-line"><a class="dropmail" href="mailto: jk@greenroom.travel" target="_blank">Drop us a line</a></span>
     <span class="leftfooter">
         <br><br>
         <span>Green Room Travel GmbH</span>
