--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,19 +2,20 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <header class="header">
-    <div class="burgerimage"><img class="burgermenu" src="/assets/burger.png"></div>
-
-    <div class="dropmenu">
-        <nav>
-            <ul>
-                <li>Our Services</li>
-                <li>Our Band</li>
-                <li>Get in Touch</li>
-                <li>Home</li>
-                <li>For Fans</li>
-            </ul>
-        </nav>
-    </div>
+    
+    <section class="top-nav">
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+      </label>
+        <ul class="menu">
+          <li><a href="/realourservices">our services</a></li>
+          <li><a href="/ourband">our band</a></li>
+          <li><a href="/getintouch">get in touch</a></li>
+          <li><a href="/">home</a></li>
+          <li><a href="/forfans">for fans</a></li>
+        </ul>
+      </section>
 
     <nav>
         <ul>
