--- a/public/forfans.css
+++ b/public/forfans.css
@@ -35,3 +35,68 @@ header .logo {
     height: 118px;
     margin-top: 6px;
 }
+
+.footer {
+    height: 180px;
+}
+
+@media screen and (max-width: 480px)  {
+    body, html {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
+    .header .leftlinks {
+        display: none;
+    }
+
+    .header .rightlinks {
+        display: none;
+    }
+
+    .header {
+        height: 200px;
+    }
+
+    .header .middlelinks {
+        margin-left: 85px;
+        margin-top: 20px;
+    }
+
+    .header .logo {
+        height: 130px;
+        width: 170px;
+        padding: 0;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        height: 200px;
+        margin-top: 5em;
+        font-size: .8em;
+    }
+
+    .footer .rightfooter {
+        margin-left: 60%;
+    }
+
+    .footer .middlefooter {
+        margin-left: .5em;
+    }
+
+    p {
+        font-size: 1.1em;
+    }
+
+    .click {
+        width: 75%;
+        text-align: center;
+        display: block;
+        color: black;
+        padding: 10px;
+        margin-left: 20px;
+        background: #B6CC38;
+    }
+}
