--- a/public/getintouch.css
+++ b/public/getintouch.css
@@ -26,3 +26,50 @@ header .logo {
 .header {
     border-bottom: solid 1px #B6CC38;
 }
+
+@media screen and (max-width: 480px)  {
+    body, html {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
+    .header .leftlinks {
+        display: none;
+    }
+
+    .header .rightlinks {
+        display: none;
+    }
+
+    .header {
+        height: 200px;
+    }
+
+    .header .middlelinks {
+        margin-left: 85px;
+        margin-top: 20px;
+    }
+
+    .header .logo {
+        height: 130px;
+        width: 170px;
+        padding: 0;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        height: 200px;
+        margin-top: 5em;
+        font-size: .8em;
+    }
+
+    .footer .rightfooter {
+        margin-left: 60%;
+    }
+
+    .footer .middlefooter {
+        margin-left: .5em;
+    }
+}
