--- a/public/header.css
+++ b/public/header.css
@@ -1,11 +1,12 @@
-/* header */
 
-.burgerimage {
+
+.topnav, .menu {
     display: none;
+    margin: 0;
 }
 
-.dropmenu {
-    display: none;
+nav {
+  margin-top: -1em;
 }
 
 header {
@@ -64,7 +65,7 @@ a {
 
 @media screen and (max-width: 480px)  { 
 
-    .burgerimage {
+    #burgerimage {
         position: absolute;
         display: block;
         left: 2em;
@@ -76,9 +77,145 @@ a {
         height: 2em;
     }
 
-    .burgerimage:hover .dropmenu {
-        display: block;
+    #burgerimage:hover .dropmenu {
+        display: flex;
+        flex-direction: column;
+        color: black;
+        width: 100%;
+        font-size: 2em;
+        background: #B6CC38;
+        margin-top: 20em;
     }
 
+    .top-nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #00BAF0;
+        background: linear-gradient(to left, black, black);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        color: #FFF;
+        height: 50px;
+        padding: 1em;
+        position: absolute;
+      }
+      
+      .menu {
+        display: flex;
+        flex-direction: row;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        z-index: 1;
+      }
+      
+      .menu > li {
+        margin: 0 1rem;
+        overflow: hidden;
+        text-align: center;
+      }
+      
+      .menu-button-container {
+        display: none;
+        height: 100%;
+        width: 50px;
+        cursor: pointer;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      
+      #menu-toggle {
+        display: none;
+      }
+      
+      .menu-button,
+      .menu-button::before,
+      .menu-button::after {
+        display: block;
+        background-color: #fff;
+        position: absolute;
+        height: 4px;
+        width: 30px;
+        transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        border-radius: 2px;
+      }
+      
+      .menu-button::before {
+        content: '';
+        margin-top: -8px;
+      }
+      
+      .menu-button::after {
+        content: '';
+        margin-top: 8px;
+      }
+      
+      #menu-toggle:checked + .menu-button-container .menu-button::before {
+        margin-top: 0px;
+        transform: rotate(405deg);
+      }
+      
+      #menu-toggle:checked + .menu-button-container .menu-button {
+        background: rgba(255, 255, 255, 0);
+      }
+      
+      #menu-toggle:checked + .menu-button-container .menu-button::after {
+        margin-top: 0px;
+        transform: rotate(-405deg);
+      }
+
+      nav {
+        margin-top: 0em;
+      }
+      
+      @media (max-width: 700px) {
+        .menu-button-container {
+          display: flex;
+        }
+        .menu {
+          position: absolute;
+          top: 0;
+          margin-top: 50px;
+          left: 0;
+          flex-direction: column;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+        }
+        #menu-toggle ~ .menu li {
+          height: 0;
+          margin: 0;
+          padding: 0;
+          border: 0;
+          transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        }
+        #menu-toggle:checked ~ .menu li {
+          border: 1px solid #333;
+          height: 2.5em;
+          padding: 0.5em;
+          transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        }
+        .menu > li {
+          display: flex;
+          justify-content: center;
+          margin: 0;
+          padding: 0.5em 0;
+          width: 100%;
+          color: white;
+          background-color: #222;
+        }
+        .menu > li:not(:last-child) {
+          border-bottom: 1px solid #444;
+        }
+
+        .menu a {
+            background: none;
+            color: white;
+        }
+
+        
+    }
 
 }
