--- a/public/impressum.css
+++ b/public/impressum.css
@@ -22,3 +22,52 @@ header .logo {
     height: 118px;
     margin-top: 6px;
 }
+
+@media screen and (max-width: 480px)  {
+
+    body, html {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        background: #464141;
+    }
+
+    .header .leftlinks {
+        display: none;
+    }
+
+    .header .rightlinks {
+        display: none;
+    }
+
+    .header {
+        height: 200px;
+    }
+
+    .header .middlelinks {
+        margin-left: 85px;
+        margin-top: 20px;
+    }
+
+    .header .logo {
+        height: 130px;
+        width: 170px;
+        padding: 0;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        height: 15em;
+        margin-top: 5em;
+        font-size: .8em;
+    }
+
+    .footer .rightfooter {
+        margin-left: 60%;
+    }
+
+    .footer .middlefooter {
+        margin-left: .5em;
+    }
+}
