--- a/public/realourservices.css
+++ b/public/realourservices.css
@@ -159,6 +159,7 @@ header .logo {
         margin: 0;
         padding: 0;
         overflow-x: hidden;
+        background: #464141;
     }
 
     .header .leftlinks {
@@ -217,14 +218,14 @@ header .logo {
         width: 75%;
         text-align: center;
         margin-left: -15em;
-        box-shadow: 0px 2px 10px 1px #36B891;
+        box-shadow: 0px 1px 1px 1px black;
     }
 
     .transportation {
         width: 75%;
         text-align: center;
         margin-left: -5em; 
-        box-shadow: 0px 2px 10px 1px #71BE4E;
+        box-shadow: 0px 1px 1px 1px black;
     }
 
     .advice, .experiences, .support {
@@ -239,19 +240,19 @@ header .logo {
     .support {
         margin-left: -15em;
         margin-top: 5em;
-        box-shadow: 0px 2px 10px 1px #71BE4E;
+        box-shadow: 0px 1px 1px 1px black;
     }
 
     .experiences {
         margin-left: -13.25em;
         margin-top: 5em; 
-        box-shadow: 0px 2px 10px 1px #1F80A1;
+        box-shadow: 0px 1px 1px 1px black;
     }
 
     .advice {
         margin-left: -5em;
         margin-top: 5em;
-        box-shadow: 0px 2px 10px 1px #828D42;
+        box-shadow: 0px 1px 1px 1px black;
     }
 
     .footer {
@@ -268,6 +269,20 @@ header .logo {
 
     .footer .middlefooter {
         margin-left: .5em;
+    }
+
+    .accomodations,
+    .transportation,
+    .support,
+    .experiences,
+    .advice {
+        background-color:#E1D9D1;
+        color: black;
+    }
+
+    h1 {
+        background-color:#E1D9D1;
+        box-shadow: 0px 1px 1px 1px black;
     }
 
 } 
