--- a/views/realourservices.ejs
+++ b/views/realourservices.ejs
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
-<body>
+<body class="pattern">
     <%- include('partials/header') %>
     <img class="ourservicesguitar" src="/assets/ourservicesguitar.png"></img>
     <h2 class="sideways">our services</h2>
