--- a/public/forfans.css
+++ b/public/forfans.css
@@ -100,3 +100,82 @@ header .logo {
         background: #B6CC38;
     }
 }
+
+@media screen and (min-width: 480px) and (max-width: 1024px) {
+    
+    .topnav {
+        display: none;
+    }
+
+    .header .leftlinks {
+        display: flex;
+        align-items: center;
+        margin-left: -.5em;
+    }
+
+    .header .rightlinks {
+        display: flex;
+        align-items: center;
+        margin-right: 4em;
+    }
+
+    .header {
+        height: 200px;
+    }
+
+    .header .middlelinks {
+        display: flex;
+        margin-left: 1em;
+        align-items: center;
+    }
+
+    .header .leftlinks,
+    .header .rightlinks,
+    .header .middlelinks {
+        margin-top: 2em;
+    }
+
+    .header .logo {
+        height: 130px;
+        width: 170px;
+        padding: 0;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        height: 200px;
+        margin-top: 10em;
+        font-size: .8em;
+    }
+
+    .footer .middlefooter {
+        justify-content: center;
+        margin-bottom: 3.5em;
+    }
+
+    .footer .leftfooter,
+    .footer .middlefooter {
+        margin-top: 3em;
+    }
+
+    section {
+        display: none;
+    }
+
+    p {
+        font-size: 2em;
+        width: 75%;
+        margin-left: 2.2em;
+        margin-top: 4em;
+        display: flex;
+    }
+
+    .click {
+        text-align: center;
+        width: 50%;
+        margin-left: 4.5em;
+    }
+    
+}
