--- a/public/main.css
+++ b/public/main.css
@@ -228,3 +228,96 @@ h1 {
         }
 
     }
+
+    @media screen and (min-width: 480px) and (max-width: 1024px) {
+        .backgroundguitar {
+            display: none;
+        }
+
+        .header {
+            height: 200px;
+        }
+
+        .topnav {
+            display: none;
+        }
+
+        .header .leftlinks {
+            display: flex;
+            align-items: center;
+            margin-left: -.5em;
+        }
+
+        .header .rightlinks {
+            display: flex;
+            align-items: center;
+            margin-right: 4em;
+        }
+
+        .header {
+            height: 200px;
+        }
+
+        .header .middlelinks {
+            display: flex;
+            margin-left: 1em;
+            align-items: center;
+        }
+
+        .header .leftlinks,
+        .header .rightlinks,
+        .header .middlelinks {
+            margin-top: 2em;
+        }
+
+        .header .logo {
+            height: 130px;
+            width: 170px;
+            padding: 0;
+        }
+
+        .infos {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .forlinks {
+            margin-top: 3em;
+        }
+
+        .bodyh1 {
+            margin-left: 3em;
+            margin-top: -3em;
+        }
+
+        .green,
+        .work {
+            width: 100%;
+            margin-left: 2.5em;
+            font-size: 1.4em;
+        }
+
+        .footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            height: 200px;
+            margin-top: 25em;
+            font-size: .8em;
+        }
+
+        .footer .middlefooter {
+            justify-content: center;
+            margin-bottom: 3.5em;
+        }
+
+        .footer .leftfooter,
+        .footer .middlefooter {
+            margin-top: 3em;
+        }
+
+        section {
+            display: none;
+        }
+        
+    }
