--- a/public/ourservices.css
+++ b/public/ourservices.css
@@ -189,7 +189,7 @@ header .logo {
         flex-direction: row;
         justify-content: space-between;
         height: 200px;
-        margin-top: 17em;
+        margin-top: 10em;
         font-size: .8em;
     }
 
@@ -206,5 +206,36 @@ header .logo {
     section {
         display: none;
     }
+
+    .guitar-image,
+    .guitar-image-bottom {
+        display: none;
+    }
+
+    .tophalf {
+        margin-left: 2em;
+    }
+
+    .how-it-works {
+        font-size: 3em;
+        margin-left: 10.5em;
+        margin-top: 1.5em;
+    }
+
+    .bottomhalf {
+        margin: 0;
+        gap: 1.5em;
+        margin-top: 5em;
+    }
+
+    .detail {
+        width: 33%;
+        margin-right: 1em;
+        margin-left: 1em;
+        gap: 1em;
+    }
     
+    .background-image {
+        background-image: url('');
+    }
 }
