--- a/public/realourservices.css
+++ b/public/realourservices.css
@@ -332,7 +332,7 @@ header .logo {
         flex-direction: row;
         justify-content: space-between;
         height: 200px;
-        margin-top: 17em;
+        margin-top: 5em;
         font-size: .8em;
     }
 
@@ -347,6 +347,58 @@ header .logo {
     }
 
     section {
+        display: none;
+    }
+
+    .ourservicesguitar {
+        display: none;
+    }
+
+    .sideways {
+        display: none;
+    }
+
+    .bothsides {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+    }
+
+    .accomodations,
+    .transportation,
+    .support,
+    .experiences,
+    .advice {
+        margin: 0;
+        width: 50%;
+        position: relative;
+    }
+
+    .right {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+    }
+
+    h1 {
+        width: 75%;
+    }
+
+    .accomodations {
+        margin-bottom: 2em;
+    }
+
+    .advice,
+    .support,
+    .accomodations {
+        margin-left: -5em;
+    }
+
+    .transportation {
+        margin-left: 5em;
+    }
+
+    .h1-rectangle, .accomodation-circle, .transportation-circle, .support-circle, .experiences-circle, .advice-circle {
         display: none;
     }
     
