--- a/views/ourservices.ejs
+++ b/views/ourservices.ejs
@@ -26,13 +26,13 @@
         <img class="guitar-image" src="/assets/backgroundguitar.png"></img>
         <img class="guitar-image-bottom" src="/assets/guitarimagebottom.png"></img>
         <span class="bottomhalf">
-            <span class="detail">
+            <span class="detail detail-reach">
                 <h2>reach out</h2>
                 <p>Get in touch and tell us a bit about yourself and share your needs with us. We can do a bit of preliminary research on things like carnets and visa requirements.</p>
                 <p>Then we can have a more in-depth discussion to help you fine-tune your budget and help us understand your travel preferences.</p>
             </span>
-            <span class="detail">
-                <br>
+            <span class="detail detail-choose">
+                <div class="break"><br></div>
                 <h2>choose your package</h2>
                 <p>Based on your needs, we will provide suggestions of routes,
                     accommodations, and transport for you to choose from — always with our commitment to
@@ -41,8 +41,8 @@
                 <p>And touring should be fun too! So let us come up with ideas for
                     sightseeing or an activity for an off day.</p>
             </span>
-            <span class="detail">
-                <br><br><br><br><br><br>
+            <span class="detail detail-get">
+                <div class="break"><br><br><br><br><br><br></div>
                 <h2>get on the road</h2>
                 <p>While you’ll have to load the gear in the van yourself, driving directions and
                     the day’s schedule are provided to you through the Master Tour app. </p>
