--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,12 @@
         <div class='menu-button'></div>
       </label>
         <ul class="menu">
-          <li><a href="/realourservices">our services</a></li>
           <li><a href="/ourband">our band</a></li>
+          <li><a href="/realourservices">our services</a></li>
           <li><a href="/getintouch">get in touch</a></li>
-          <li><a href="/">home</a></li>
+          <li><a href="/ourservices">for bands</a></li>
           <li><a href="/forfans">for fans</a></li>
+          <li><a href="/">home</a></li>
         </ul>
       </section>
 
@@ -21,7 +22,7 @@
         <ul>
             <div class="leftlinks">
                 <li><a href="/ourband">our band</a></li>
-                <li><a href="/realourservices">our services</a></li>
+                <li class="ourservices"><a href="/realourservices">our services</a></li>
             </div>
             <div class="middlelinks">
                 <li><a href="/" class="logo-a"><img class="logo" src="/assets/GreenRoom_logo 1.png"></img></a></li>
