--- a/public/header.css
+++ b/public/header.css
@@ -51,12 +51,16 @@ a {
     display: flex;
     gap: 2.5vw;
     margin-top: 3.5vw;
-    margin-right: 4.2vw;
+    margin-right: 8.8em;
     font-size: 1.5em;
 }
 
+.ourservices {
+  margin-left: 3em;
+}
+
 .logo {
-    margin-right: 8.5vw;
+    margin-right: 3em;
 }
 
 .middlelinks a {
