--- a/public/ourservices.css
+++ b/public/ourservices.css
@@ -81,7 +81,7 @@ body {
     margin-top: 40px;
 }
 
-header .logo {
+.header .logo {
     height: 118px;
     margin-top: 6px;
 }
@@ -138,10 +138,67 @@ header .logo {
     }
 
     .guitar-image,
-    .background-image,
     .guitar-image-bottom {
         display: none;
     }
+
+    .tophalf {
+        width: 90%;
+        padding: 0;
+        margin: 0;
+        gap: 0;
+        margin-top: 4em;
+        margin-left: 1.1em;
+    }
+
+    .detail-top {
+        width: 75%;
+        margin-bottom: 0;
+    }
+
+    .how-it-works {
+        margin-left: 3.2em;
+        margin-top: 0;
+    }
+
+    .detail {
+        flex-direction: column;
+        width: 350px;
+        margin-left: -14.5em;
+        gap: 0px;
+        padding: 0;
+    }
+
+    .detail-reach {
+        gap: 0px;
+    }
+
+    .break {
+        display: none;
+    }
+
+    .detail-get {
+        gap: 0px;
+    }
+
+    .detail-get p {
+        width: 75%;
+    }
+
+    .detail-reach p {
+        width: 75%;
+    }
+
+    .detail-choose p {
+        width: 75%;
+    }
+
+    .bottomhalf {
+        flex-direction: column;
+        gap: 2em;
+        margin-top: 2em;
+    }
+
 }
 
 @media screen and (min-width: 480px) and (max-width: 1024px) {
