--- a/views/ourband.ejs
+++ b/views/ourband.ejs
@@ -19,7 +19,7 @@
         </span>
         <span class="name-column-one">
             <span class="name-kempa">
-                <h2><img src="assets/kempadot.png">Jeff Kempa</h2>
+                <h2><img src="assets/kempadot2.png">Jeff Kempa</h2>
                 <p>founder, IATA certified travel agent</p>
                 <span class="information">
                     <span>Jeff Kempa, Founder & IATA Certified Travel Agent</span>
@@ -28,7 +28,7 @@
                 </span>
             </span>
             <span class="name-pete">
-                <h2><img src="assets/sheadot.png">Pete O'Shea</h2>
+                <h2><img src="assets/sheadot2.png">Pete O'Shea</h2>
                 <p>business development</p>
                 <span class="information">
                     <span>Pete O'Shea, Business Development</span>
@@ -36,7 +36,7 @@
                 </span>
             </span>
             <span class="name-jesse">
-                <h2><img src="assets/ledouxdot.png">Jesse LeDoux</h2>
+                <h2><img src="assets/ledouxdot2.png">Jesse LeDoux</h2>
                 <p>art director</p>
                 <span class="information">
                     <span>Jesse LeDoux, Art Director</span>
@@ -54,7 +54,7 @@
                 </span>
             </span>
             <span class="name-jeff">
-                <h2>Jeff Mueller<img src="assets/muellerdot.png"></h2>
+                <h2>Jeff Mueller<img src="assets/muellerdot2.png"></h2>
                 <p>artist tour logistics</p>
                 <span class="information-right">
                     <span>Jeff Mueller, Artist Tour Logistics</span>
