--- a/views/realourservices.ejs
+++ b/views/realourservices.ejs
@@ -37,7 +37,7 @@
         <img class="support-circle" src="/assets/supportcircle.png"></img>
         <div class="support">
         <h3>Support</h3>
-        <span>We are committed to detail and transparency and always share our proposals with you before booking. We provide daily logistical support through Master Tour and Trip It, including driving directions, schedules, and other important information about the day ahead.<br>
+        <span>We are committed to detail and transparency and always share our proposals with you before booking. We provide daily logistical support through Master Tour and TripIt, including driving directions, schedules, and other important information about the day ahead.<br>
 
         Dealing with a cancelled flight or somethng unexpected on the road? We’re only a phone call away. 
         </span>
@@ -46,7 +46,7 @@
         <img class="experiences-circle" src="/assets/experiencescircle.png"></img>
         <div class="experiences">
         <h3>Experiences</h3>
-        <span>Whether you're performing on tour or following your favorite artist to a new location, we want to help you enjoy your trip to the fullest. We can help plan off-day excursions, make sure you see that "can't miss" exhibit or try the best hole-in-the-wall restaurant, or extend your trip to a full vacation.</span>
+        <span>Whether you're performing on tour or following your favorite artist to a new location, we want to help you enjoy your trip to the fullest. We can help plan off-day excursions, make sure you see that "can't miss" exhibit or try the best hole-in-the-wall restaurant - or extend your trip to a full vacation.</span>
         </div>
         </div>
         <img class="advice-circle" src="/assets/advicecircle.png"></img>
@@ -54,7 +54,7 @@
         <h3>Advice and Problem Solving</h3>
         <span>First big tour? We can help you sort out the logistics of your gear.<br>
         Traveling to a new country? We're happy to investigate visas and carnets for you.<br>
-        Tight budget? We can make suggestions for cutting costs and help with booking deals.</span>
+        Tight budget? Let us hunt for the best deals and find creative solutions to cut costs.</span>
         </div>
     </div>
     </div>
