--- a/public/ourband.css
+++ b/public/ourband.css
@@ -30,7 +30,7 @@ body {
 
 .header-h1 {
     transform: rotate(-90deg);
-    margin-bottom: 300px;
+    margin-bottom: 250px;
     font-size: 2em;
 }
 
@@ -123,7 +123,7 @@ body {
 
 header .logo {
     height: 118px;
-    margin-top: 6px;
+    margin-top: 1em;
 }
 
 @media screen and (max-width: 480px)  { 
