--- a/public/ourservices.css
+++ b/public/ourservices.css
@@ -81,9 +81,9 @@ body {
     margin-top: 40px;
 }
 
-.header .logo {
+header .logo {
     height: 118px;
-    margin-top: 6px;
+    margin-top: 1em;
 }
 
 .header {
