--- a/public/getintouch.css
+++ b/public/getintouch.css
@@ -10,12 +10,16 @@ body {
 
 .touch {
     margin-bottom: 5%;
-    margin-top: 1%;
+    margin-top: 3%;
     margin-left: 12.5%;
 }
 
 h1 {
-    margin-left: 3%;
+    position: absolute;
+    font-size: 3em;
+    transform: rotate(-90deg);
+    top:5.5em;
+    left: -1em;
 }
 
 header .logo {
@@ -32,6 +36,13 @@ header .logo {
         margin: 0;
         padding: 0;
         overflow-x: hidden;
+    }
+
+    h1 {
+        position:static;
+        font-size: 2em;
+        margin-left: 1em;
+        transform: rotate(0);
     }
 
     .header .leftlinks {
@@ -135,6 +146,14 @@ header .logo {
 
     section {
         display: none;
+    }
+
+    h1 {
+        display: none;
+    }
+
+    .touch {
+        margin-top: 10%;
     }
     
 }
