--- a/public/ourservices.css
+++ b/public/ourservices.css
@@ -169,7 +169,7 @@ header .logo {
 
     .how-it-works {
         margin-left: 3.2em;
-        margin-top: 0em;
+        margin-top: .5em;
         font-size: 2em;
     }
 
