--- a/views/getintouch.ejs
+++ b/views/getintouch.ejs
@@ -14,7 +14,7 @@
     
     <h1>get in touch</h1>
 
-    <div class="touch" data-tf-widget="fFUruKdK" data-tf-opacity="100" data-tf-iframe-props="Lead Generation Form for Bands and Touring Artists" data-tf-transitive-search-params data-tf-medium="snippet" style="width:75%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+    <div class="touch" data-tf-live="01H6P8JS842RP2D80CBCKX9BQ4"></div><script src="//embed.typeform.com/next/embed.js"></script>
 
     <%- include('partials/footer') %>
 </body>
