--- a/public/getintouch.css
+++ b/public/getintouch.css
@@ -11,7 +11,8 @@ body {
 .touch {
     margin-bottom: 5%;
     margin-top: 3%;
-    margin-left: 12.5%;
+    margin-left: 15%;
+    width: 75%;
 }
 
 h1 {
@@ -20,6 +21,7 @@ h1 {
     transform: rotate(-90deg);
     top:5.5em;
     left: -1em;
+    z-index: 1;
 }
 
 header .logo {
