--- a/views/ourservices.ejs
+++ b/views/ourservices.ejs
@@ -50,6 +50,9 @@
                     available for emergencies, so you can just focus on the next show.</p>
             </span>
         </span>
+        <span class="tophalf bottom-top">
+            <p class="detail-top"><button><a href="mailto:jk@greenroom.travel">Contact Green Room</a></button>and start planning your next tour today.
+        </span>
         </div>
 
     <%- include('partials/footer') %>
