--- a/views/realourservices.ejs
+++ b/views/realourservices.ejs
@@ -37,9 +37,9 @@
         <img class="support-circle" src="/assets/supportcircle.png"></img>
         <div class="support">
         <h3>Support</h3>
-        <span>We are committed to detail and transparency and always share our proposals with you before booking. We provide daily logistical support through Master Tour and TripIt, including driving directions, schedules, and other important information about the day ahead.<br>
+        <span>Committed to detail and transparency, we will always share and explain our proposals with you before booking. We provide daily logistical support through Master Tour and TripIt, including driving directions, schedules, and other important information about the day ahead.<br>
 
-        Dealing with a cancelled flight or somethng unexpected on the road? We’re only a phone call away. 
+        Dealing with a cancelled flight or something unexpected? We’re only a phone call away. 
         </span>
         </div>
         <div class="all-experience">
