--- a/public/ourservices.css
+++ b/public/ourservices.css
@@ -230,6 +230,25 @@ header .logo {
         margin-top: 2em;
     }
 
+    .bottom-top {
+        width: 400px;
+        margin-left: -12.5em;
+        gap: 0px;
+        padding: 0;
+        margin-top: 0;
+    }
+
+    .bottom-top p {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+    }
+
+    .bottom-top button {
+        margin-left: 1em;
+        margin-bottom: 1em;
+    }
+
 }
 
 @media screen and (min-width: 480px) and (max-width: 1024px) {
@@ -325,5 +344,10 @@ header .logo {
     
     .background-image {
         background-image: url('');
+    }
+
+    .bottom-top {
+        width: 100%;
+        margin-left: -6.5em;
     }
 }
