--- a/public/ourservices.css
+++ b/public/ourservices.css
@@ -194,7 +194,7 @@ header .logo {
 
     .detail {
         flex-direction: column;
-        width: 350px;
+        width: 23.3em;
         margin-left: -14.5em;
         gap: 0px;
         padding: 0;
@@ -232,7 +232,7 @@ header .logo {
 
     .bottom-top {
         width: 400px;
-        margin-left: -12.5em;
+        margin-left: -12em;
         gap: 0px;
         padding: 0;
         margin-top: 0;
